trying to fix scrolling bug on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -64,7 +64,10 @@ body {
     pointer;
 }
 .modal-open {
+    height: 100%;
     overflow: hidden;
+    width: 100%;
+    position: fixed;
 }
 .levels-grid {
     display: flex;
